<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".AddNoteActivity">

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        style="@style/mySpinnerItemStyle"
        android:entries="@array/spinner_items"
        android:scrollbarStyle="insideInset"
        android:gravity="start|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="viewStart"
        android:fontFamily="monospace"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_text_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner" />


</LinearLayout>